css/base.css
h1, h2{
    color: var(--blue-color);
}

div, p, span, li{
    font-size: 16px;
    line-height: 24px;
}

/*===============================================
Colors
===============================================*/

:root {
    --blue-color: #3253ff;
    --dark-blue-color: #001caf;
    --light-gray-color: #eaeaea;
    --dark-gray-color: #3a3a3a;
}

.blue{
    background-color: var(--blue-color);
}
.dark-blue{
    background-color: var(--dark-blue-color);
}
.light-gray{
    background-color: var(--light-gray-color);
}
.dark-gray{
    background-color: var(--dark-gray-color);
}

